# new-lune

./: new-lune.cabal  todo.txt
app/: Infer.hs  Main.hs  Parse.hs  Syntax.hs
app/Compiler/: Arrange.hs  Infer.hs  Parse.hs  Translate.hs
app/Syntax/: Common.hs  Core.hs  First.hs  Frontend.hs  Second.hs
