cabal-version:      2.4
name:               new-lune
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             UnaryPlus
maintainer:         ombspring@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable system-f-omega
    main-is:          Main.hs
    other-modules:    Compiler.Infer, Compiler.Parse,
                      Syntax.Common, Syntax.Frontend, Syntax.Core
    ghc-options:      -Wall

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.1.0,
                      containers,
                      mtl,
                      text,
                      megaparsec,
                      parser-combinators
    hs-source-dirs:   app
    default-language: Haskell2010
